tests/miniJava/pos/000692_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) { } else while ( 0 ) { } } }
