tests/miniJava/neg/003533_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( class java { } 0 ) { } else { } } }
